--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "node index.js"
+    "startCommand": "node index.js",
+    "buildCommand": "npm install"
+
   },
   "author": "miguel.yance",
   "license": "ISC",
