--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "startCommand": "node index.js",
-    "buildCommand": "npm install"
+    "dev": "nodemon server.js"
 
   },
   "author": "miguel.yance",
